--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"description": "collection javascript algorithms",
 	"main": "framework.js",
 	"scripts": {
-		"test": "nyc mocha **/*.test.js",
+		"test": "nyc mocha global.test.js **/*.test.js",
 		"coverage": "nyc report --reporter=text-lcov | coveralls"
 	},
 	"nyc": {
@@ -18,6 +18,7 @@
 		],
 		"exclude": [
 			"docs/",
+		  	"playground.js",
 			"**/*.test.js"
 		],
 		"reporter": [
